--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,8 +1,10 @@
 body{
-    font-family: 'Courier New', Courier, monospace;
+    background-color: #499272;
+    font-family: 'Syne Mono', monospace;
 }
 
-h2{
+h1{
+    font-size: 32pt;
     text-align: center;
 }
 
@@ -14,12 +16,14 @@ input{
     text-align: right;
 }
 
-.operation, .numpad{
+.operation, .numpad, .clear{
     border-radius: 4px;
     font-size: large;
     font-weight: bold;
-    margin: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
     height: 80px;
+    
 }
 
 #calc-container{
@@ -27,6 +31,7 @@ input{
     
     border-radius: 8px;
     border-style: groove;
+    
     display: grid;
     grid-template-areas: 
     ". display . ."
@@ -34,12 +39,13 @@ input{
     "seven eight nine equal"
     "four five six equal"
     "one two three equal"
-    "zero period . equal";
-    height: 500px;
+    "zero period ac equal";
+    height: 600px;
     margin-left: auto;
     margin-right: auto;
+    
     box-shadow: 5px 10px #888888;
-    width: 40%;
+    width: 45%;
 }
 
 #display-container{
@@ -50,6 +56,10 @@ input{
 
 #add{
     grid-area: add;
+}
+
+#all-clear{
+    grid-area: ac;
 }
 
 #subtract{
